# posture_tracker

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: nice_nano_v2.overlay
app/src/: bluetooth_support.c  main.c  posture_detection.c  sensor_processing.c  telemetry_storage.c  vibration.c
boards/nice_nano/: Kconfig.defconfig  Kconfig.nice_nano_v2  board.cmake  board.yml  nice_nano.dtsi  nice_nano_v2.dts  nice_nano_v2_defconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/qmc5883l/: CMakeLists.txt  Kconfig  qmc5883l.c  qmc5883l.h
dts/bindings/sensor/: qst,qmc5883l.yaml
include/app/: bluetooth_support.h  posture_detection.h  sensor_processing.h  telemetry_storage.h  vibration.h
